# src/api/swagger.json
@@ -599,40 +599,9 @@
         "tags": [
           "Item"
         ],
-        "parameters": [
-          {
-            "name": "count",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 10
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
           },
           "401": {
             "description": "Unauthorized",
@@ -2202,6 +2171,10 @@
       "ItemCreateDto": {
         "type": "object",
         "properties": {
+          "itemCode": {
+            "type": "string",
+            "nullable": true
+          },
           "itemName": {
             "type": "string",
             "nullable": true
@@ -2227,6 +2200,10 @@
           "itemID": {
             "type": "integer",
             "format": "int32"
+          },
+          "itemCode": {
+            "type": "string",
+            "nullable": true
           },
           "itemName": {
             "type": "string",
@@ -2254,6 +2231,10 @@
       "ItemUpdateDto": {
         "type": "object",
         "properties": {
+          "itemCode": {
+            "type": "string",
+            "nullable": true
+          },
           "itemName": {
             "type": "string",
             "nullable": true
